--- a/Типы и структура СУБД.md
+++ b/Типы и структура СУБД.md
@@ -46,21 +46,20 @@
 
 Данные записываются на все узлы с задержкой до часа (асинхронная запись):
 
-CAP: CP (Consistent and Partition-tolerant).
-PACELC: PA/EL (Partition-tolerant and Eventually Consistent with Latency).
-Объяснение: Здесь система выбирает поддержку согласованности и устойчивости к разделению, но может при этом жертвовать некоторой задержкой для записи.
+CAP: CA (Consistent and Availability ).
+PACELC: PA.
+Объяснение: Запись данных выполняется на все узлы, что гарантирует их доступность для чтения, но с задержкой до часа. Однако, наличие задержки может повлиять на актуальность данных и время консистентности..
 
 При сетевых сбоях система может разделиться на 2 раздельных кластера:
 
-CAP: AP (Available and Partition-tolerant).
-PACELC: PA (Partition-tolerant and Available).
-Объяснение: Здесь система выбирает поддержку доступности и устойчивости к разделению, допуская возможность временной несогласованности.
+CAP: AP (Consistent and Available).
+PACELC: CP (Consistent and Partition tolerance).
+Объяснение: в случае сетевых сбоев, система будет разделена на два раздельных кластера, что приводит к потере доступности. Таким образом, система может быть классифицирована как CP.
 
 Система может не прислать корректный ответ или сбросить соединение:
-
-CAP: CA (Consistent and Available).
-PACELC: CL (Consistent and Low Latency).
-Объяснение: Здесь система выбирает поддержку согласованности и доступности, с фокусом на минимизации задержек.
+CAP: AP (Available and Partition tolerance).
+PACELC: AP.
+Объяснение: В случае, когда система может не прислать корректный ответ или сбросить соединение, она может обеспечивать доступность (A), но не гарантирует согласованность (C) и отказоустойчивость (P).
 
 Задача 3
 Могут ли в одной системе сочетаться принципы BASE и ACID? Почему?
